code quality improvement of sts