@@ -1,19 +1,17 @@
 /*
  * Copyright (c) 2015, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
  *
- * WSO2 Inc. licenses this file to you under the Apache License,
- * Version 2.0 (the "License"); you may not use this file except
- * in compliance with the License.
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- * http://www.apache.org/licenses/LICENSE-2.0
+ *      http://www.apache.org/licenses/LICENSE-2.0
  *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on an
- * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied. See the License for the
- * specific language governing permissions and limitations
- * under the License.
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
 
 package org.wso2.carbon.identity.application.authenticator.fido;
@@ -116,7 +114,7 @@ public class FIDOAuthenticator extends AbstractApplicationAuthenticator
         try {
             //authentication page's URL.
             String loginPage = ConfigurationFacade.getInstance().getAuthenticationEndpointURL();
-            loginPage.replace("login.do", "authentication.jsp");
+            loginPage= loginPage.replace("login.do", "authentication.jsp");
             //username from basic authenticator.
             AuthenticatedUser user = getUsername(context);
             //origin as appID eg.: http://example.com:8080
@@ -134,9 +132,9 @@ public class FIDOAuthenticator extends AbstractApplicationAuthenticator
                                       "&data=" + data.toJson());
             } else {
                 String redirectURL = loginPage.replace("login.do", "retry.do");
-                redirectURL = response.encodeRedirectURL(redirectURL + ("?")) + "&failedUsername=" + URLEncoder.encode(user.getUserName(), "UTF-8") +
-                              "&statusMsg=" + URLEncoder.encode(FIDOAuthenticatorConstants.AUTHENTICATION_ERROR_MESSAGE, "UTF-8") +
-                              "&status=" + URLEncoder.encode(FIDOAuthenticatorConstants.AUTHENTICATION_STATUS, "UTF-8");
+                redirectURL = response.encodeRedirectURL(redirectURL + ("?")) + "&failedUsername=" + URLEncoder.encode(user.getUserName(), FIDOAuthenticatorConstants.UTF_8) +
+                              "&statusMsg=" + URLEncoder.encode(FIDOAuthenticatorConstants.AUTHENTICATION_ERROR_MESSAGE, FIDOAuthenticatorConstants.UTF_8) +
+                              "&status=" + URLEncoder.encode(FIDOAuthenticatorConstants.AUTHENTICATION_STATUS, FIDOAuthenticatorConstants.UTF_8);
                 response.sendRedirect(redirectURL);
             }
 
